# rust-scrap-app

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
