[package]
name = "scraper-app"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.22.0"
dotenv = "0.15.0"
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.39.0", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
once_cell = "1.17"
env_logger = "0.11.6"
log = "0.4"
reqwest = { version = "0.12.12", features = ["json"] }